<resources>
    <string name="username_warning">Invalid username please try again!</string>
    <string name="password_warning">Invalid password please try again!</string>
    <string name="app_name">Layouts</string>
    <string name="submit">Submit</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="come_back_with_your_id">Come back with your ID</string>
    <string name="login2">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mission_complete">Mission Complete</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
</resources>